Simplify hero layout

--- a/public/index.html
+++ b/public/index.html
@@ -106,37 +106,11 @@
       <div class="hero-stripe hero-stripe--three" data-depth="0.14"></div>
     </div>
     <div class="hero-content">
-      <div class="hero-badge" data-depth="-0.05">
-        <span>24/7</span>
-        Emergency service
-      </div>
-      <p class="hero-kicker">Maldives · Fabrication Studio</p>
       <h1 id="heroText">
         <span class="hero-text-inner" data-text="Crafting Visual Experiences">Crafting Visual Experiences</span>
       </h1>
-      <p class="hero-subtitle">
-        Illuminated signage, kinetic displays, and immersive retail that keep resorts and island brands unforgettable.
-      </p>
-      <div class="hero-cta">
-        <a href="#projects" class="btn">Explore Projects</a>
-        <a href="https://wa.me/9607899922" class="btn btn--ghost" target="_blank" rel="noopener">
-          WhatsApp Studio
-        </a>
-      </div>
-      <div class="hero-metrics">
-        <article class="metric-card" data-depth="0.03">
-          <span class="metric-value">250+</span>
-          <span class="metric-label">Installations delivered</span>
-        </article>
-        <article class="metric-card" data-depth="-0.02">
-          <span class="metric-value">48h</span>
-          <span class="metric-label">Rapid service window</span>
-        </article>
-        <article class="metric-card" data-depth="0.05">
-          <span class="metric-value">8</span>
-          <span class="metric-label">Islands serviced weekly</span>
-        </article>
-      </div>
+      <p class="hero-subtitle">Bold signs. Bigger impact.</p>
+      <a href="#projects" class="btn">Explore Projects</a>
     </div>
   </section>
 
