Revamp admin UI and hero animation

--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,8 @@
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "Movil",
-    "url": "https://movil.mv/",
-    "image": "https://res.cloudinary.com/dok4qykka/image/upload/v1762713000/movil/projects/fuda3m6p3shf7n8djkbm.jpg",
+    "url": "https://movillive.com/",
+    "image": "https://www.movillive.com/favicon/android-chrome-512x512.png",
     "description": "Movil designs and fabricates custom signage, LED displays, and experiential installations for brands across the Maldives.",
     "telephone": "+9607899922",
     "email": "sales@movillive.com",
@@ -107,7 +107,13 @@
     </div>
     <div class="hero-content">
       <h1 id="heroText">
-        <span class="hero-text-inner" data-text="Crafting Visual Experiences">Crafting Visual Experiences</span>
+        <span
+          class="hero-text-inner"
+          data-text="Crafting Visual Experiences"
+          data-lines="Crafting|Visual|Experiences"
+        >
+          Crafting Visual Experiences
+        </span>
       </h1>
       <p class="hero-subtitle">Bold signs. Bigger impact.</p>
       <a href="#projects" class="btn">Explore Projects</a>
@@ -137,8 +143,8 @@
           <div class="projects-noscript">
             <h3>Featured Signage Projects</h3>
             <ul>
-              <li>Custom illuminated exterior signage for resorts across the Maldives</li>
-              <li>Interactive LED wayfinding displays for hospitality venues</li>
+              <li>Custom illuminated exterior signage for all purposes</li>
+              <li>Interactive LED displays</li>
               <li>Retail fit-outs and CNC carved branding walls for national retailers</li>
             </ul>
             <p>Enable JavaScript to explore the full interactive portfolio.</p>
@@ -152,10 +158,10 @@
     <section id="contact" class="contact-section dark-panel reveal-section">
       <div class="section-inner contact-grid">
         <div class="contact-column">
-          <p class="section-eyebrow">Let's build</p>
+          <p class="section-eyebrow">Let's get it done</p>
           <h2>Contact Us</h2>
           <p class="contact-subtitle">
-            We stage, fabricate, and install across the Maldives. Reach the workshop team instantly for briefs, emergency service, or showroom visits.
+            We stage, fabricate, and install.
           </p>
           <div class="contact-actions">
             <a class="btn" href="https://wa.me/9607899922" target="_blank" rel="noopener noreferrer">
@@ -313,6 +319,7 @@
       });
     }
   </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" defer></script>
   <script src="script.js" defer></script>
 </body>
 </html>
