--- a/public/index.html
+++ b/public/index.html
@@ -107,13 +107,7 @@
     </div>
     <div class="hero-content">
       <h1 id="heroText">
-        <span
-          class="hero-text-inner"
-          data-text="Crafting Visual Experiences"
-          data-lines="Crafting|Visual|Experiences"
-        >
-          Crafting Visual Experiences
-        </span>
+        <span class="hero-text-inner" data-text="Crafting Visual Experiences">Crafting Visual Experiences</span>
       </h1>
       <p class="hero-subtitle">Bold signs. Bigger impact.</p>
       <a href="#projects" class="btn">Explore Projects</a>
@@ -319,7 +313,6 @@
       });
     }
   </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" defer></script>
   <script src="script.js" defer></script>
 </body>
 </html>
