Add kinetic hero effect

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
   <link rel="shortcut icon" href="/favicon/favicon.ico" />
   <link rel="manifest" href="/favicon/site.webmanifest" />
+  <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/longsile" />
+  <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/thegoodmonolith" />
+  <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/pp-neue-montreal" />
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -86,24 +89,87 @@
     </div>
   </header>
 
-  <section id="hero" class="hero">
-    <div class="hero-background" aria-hidden="true">
-      <div class="hero-video-layer hero-video--empty" data-hero-video data-depth="0.06">
-        <video
-          id="heroAmbientVideo"
-          muted
-          loop
-          playsinline
-          preload="none"
-          poster="/static/default-video-thumb.jpg"
-          aria-hidden="true">
-        </video>
-        <div class="hero-video-overlay"></div>
-        <div class="hero-video-glow"></div>
+  <section id="hero" class="hero hero--kinetic">
+    <div class="hero-kinetic" aria-hidden="true">
+      <div class="hero-kinetic__frame"></div>
+      <div class="hero-kinetic__bg hero-kinetic__bg--default" data-kinetic-bg="default"></div>
+      <div class="hero-kinetic__bg hero-kinetic__bg--focus" data-kinetic-bg="focus"></div>
+      <div class="hero-kinetic__bg hero-kinetic__bg--presence" data-kinetic-bg="presence"></div>
+      <div class="hero-kinetic__bg hero-kinetic__bg--feel" data-kinetic-bg="feel"></div>
+      <div class="hero-kinetic__gradient"></div>
+      <div class="hero-kinetic__text-grid">
+        <span class="hero-kinetic__grid-word" style="top:5%; left:8%;" data-kinetic-word="BE">BE</span>
+        <span class="hero-kinetic__grid-word" style="top:5%; left:15%;" data-kinetic-word="PRESENT">PRESENT</span>
+        <span class="hero-kinetic__grid-word" style="top:5%; left:28%;" data-kinetic-word="LISTEN">LISTEN</span>
+        <span class="hero-kinetic__grid-word" style="top:5%; left:42%;" data-kinetic-word="DEEPLY">DEEPLY</span>
+        <span class="hero-kinetic__grid-word" style="top:5%; left:55%;" data-kinetic-word="OBSERVE">OBSERVE</span>
+        <span class="hero-kinetic__grid-word" style="top:5%; left:75%;" data-kinetic-word="&amp;">&amp;</span>
+        <span class="hero-kinetic__grid-word" style="top:5%; left:85%;" data-kinetic-word="FEEL">FEEL</span>
+
+        <span class="hero-kinetic__grid-word" style="top:10%; left:12%;" data-kinetic-word="MAKE">MAKE</span>
+        <span class="hero-kinetic__grid-word" style="top:10%; left:45%;" data-kinetic-word="BETTER">BETTER</span>
+        <span class="hero-kinetic__grid-word" style="top:10%; right:20%;" data-kinetic-word="DECISIONS">DECISIONS</span>
+
+        <span class="hero-kinetic__grid-word" style="top:15%; left:8%;" data-kinetic-word="THE">THE</span>
+        <span class="hero-kinetic__grid-word" style="top:15%; left:30%;" data-kinetic-word="CREATIVE">CREATIVE</span>
+        <span class="hero-kinetic__grid-word" style="top:15%; left:55%;" data-kinetic-word="PROCESS">PROCESS</span>
+        <span class="hero-kinetic__grid-word" style="top:15%; right:20%;" data-kinetic-word="IS">IS</span>
+        <span class="hero-kinetic__grid-word" style="top:15%; right:5%;" data-kinetic-word="MYSTERIOUS">MYSTERIOUS</span>
+
+        <span class="hero-kinetic__grid-word" style="top:25%; left:5%;" data-kinetic-word="S">S</span>
+        <span class="hero-kinetic__grid-word" style="top:25%; left:10%;" data-kinetic-word="I">I</span>
+        <span class="hero-kinetic__grid-word" style="top:25%; left:15%;" data-kinetic-word="M">M</span>
+        <span class="hero-kinetic__grid-word" style="top:25%; left:20%;" data-kinetic-word="P">P</span>
+        <span class="hero-kinetic__grid-word" style="top:25%; left:25%;" data-kinetic-word="L">L</span>
+        <span class="hero-kinetic__grid-word" style="top:25%; left:30%;" data-kinetic-word="I">I</span>
+        <span class="hero-kinetic__grid-word" style="top:25%; left:35%;" data-kinetic-word="C">C</span>
+        <span class="hero-kinetic__grid-word" style="top:25%; left:40%;" data-kinetic-word="I">I</span>
+        <span class="hero-kinetic__grid-word" style="top:25%; left:45%;" data-kinetic-word="T">T</span>
+        <span class="hero-kinetic__grid-word" style="top:25%; left:50%;" data-kinetic-word="Y">Y</span>
+        <span class="hero-kinetic__grid-word" style="top:25%; right:5%;" data-kinetic-word="IS THE KEY">IS THE KEY</span>
+
+        <span class="hero-kinetic__grid-word" style="top:35%; left:25%;" data-kinetic-word="FIND YOUR VOICE">FIND YOUR VOICE</span>
+        <span class="hero-kinetic__grid-word" style="top:35%; left:65%;" data-kinetic-word="TRUST INTUITION">TRUST INTUITION</span>
+
+        <span class="hero-kinetic__grid-word" style="top:50%; left:5%;" data-kinetic-word="EMBRACE SILENCE">EMBRACE SILENCE</span>
+        <span class="hero-kinetic__grid-word" style="top:50%; right:5%;" data-kinetic-word="QUESTION EVERYTHING">QUESTION EVERYTHING</span>
+
+        <span class="hero-kinetic__grid-word" style="top:75%; left:20%;" data-kinetic-word="TRUTH">TRUTH</span>
+        <span class="hero-kinetic__grid-word" style="top:75%; right:20%;" data-kinetic-word="WISDOM">WISDOM</span>
+
+        <span class="hero-kinetic__grid-word" style="top:80%; left:10%;" data-kinetic-word="FOCUS">FOCUS</span>
+        <span class="hero-kinetic__grid-word" style="top:80%; left:35%;" data-kinetic-word="ATTENTION">ATTENTION</span>
+        <span class="hero-kinetic__grid-word" style="top:80%; left:65%;" data-kinetic-word="AWARENESS">AWARENESS</span>
+        <span class="hero-kinetic__grid-word" style="top:80%; right:10%;" data-kinetic-word="PRESENCE">PRESENCE</span>
+
+        <span class="hero-kinetic__grid-word" style="top:85%; left:25%;" data-kinetic-word="SIMPLIFY">SIMPLIFY</span>
+        <span class="hero-kinetic__grid-word" style="top:85%; right:25%;" data-kinetic-word="REFINE">REFINE</span>
       </div>
-      <div class="hero-stripe hero-stripe--one" data-depth="0.1"></div>
-      <div class="hero-stripe hero-stripe--two" data-depth="-0.04"></div>
-      <div class="hero-stripe hero-stripe--three" data-depth="0.14"></div>
+      <div class="hero-kinetic__rows">
+        <button class="hero-kinetic__row" type="button" data-kinetic-row="focus">
+          <span class="hero-kinetic__row-text" data-text="Focus">Focus</span>
+        </button>
+        <button class="hero-kinetic__row" type="button" data-kinetic-row="presence">
+          <span class="hero-kinetic__row-text" data-text="Presence">Presence</span>
+        </button>
+        <button class="hero-kinetic__row" type="button" data-kinetic-row="feel">
+          <span class="hero-kinetic__row-text" data-text="Feel">Feel</span>
+        </button>
+      </div>
+      <div class="hero-kinetic__type">
+        <div class="hero-kinetic__type-line">focus focus focus</div>
+        <div class="hero-kinetic__type-line">presence presence presence</div>
+        <div class="hero-kinetic__type-line">feel feel feel</div>
+        <div class="hero-kinetic__type-line">focus focus focus</div>
+        <div class="hero-kinetic__type-line">presence presence presence</div>
+        <div class="hero-kinetic__type-line">focus focus focus</div>
+        <div class="hero-kinetic__type-line">focus focus focus</div>
+        <div class="hero-kinetic__type-line">presence presence presence</div>
+        <div class="hero-kinetic__type-line">feel feel feel</div>
+        <div class="hero-kinetic__type-line">focus focus focus</div>
+        <div class="hero-kinetic__type-line">presence presence presence</div>
+        <div class="hero-kinetic__type-line">focus focus focus</div>
+      </div>
     </div>
     <div class="hero-content">
       <h1 id="heroText">
@@ -313,6 +379,10 @@
       });
     }
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/SplitText.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/CustomEase.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrambleTextPlugin.min.js" defer></script>
   <script src="script.js" defer></script>
 </body>
 </html>
